--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<head>
+  <script src="https://unpkg.com/wicg-inert/dist/inert.min.js"></script>
+</head>
+<button id="openMenu">☰ Menu</button>
 
+<aside id="sideMenu" inert>
+  <button id="closeMenu">✖ Close</button>
+  <p>This is the side menu</p>
+</aside>
+
+<main id="mainContent">
+  <h1>Main Page</h1>
+  <button>Click Me</button>
+</main>
